--- a/src/App.css
+++ b/src/App.css
@@ -5,38 +5,64 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.main-wrap{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  h1{
+    font-size: 50px;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.christmas{
+  max-width: 650px;
+  width: 100%;
+  position: relative;
 }
 
-.card {
-  padding: 2em;
+.socials-btn{
+  position: fixed;
+  bottom: 10%;
+  left: 10%;
 }
 
-.read-the-docs {
-  color: #888;
+.train{
+  width: 100%;
 }
+
+.street{
+  width: 100%;
+}
+
+.sink{
+  width: 100%;
+}
+
+.transition{
+  background: rgb(0,0,0);
+  background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 46%, rgba(255,255,255,1) 100%);
+  height: 500px;
+  width: 100%;
+}
+
+.horns{
+  width: 100%;
+}
+
+.mira{
+  width: 100%;
+}
+
+.jasper{
+  width: 100%;
+}
+
+.falling{
+  width: 100%;
+}
+
+.shy{
+  width: 100%;
+}
+
+
